--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.26.6",
-    "framer-motion": "^12.23.11",
+    "framer-motion": "^12.34.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
+    "react-simple-typewriter": "^5.0.1",
     "react-type-animation": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
